adding more potential java options to jetty start script
git-svn-id: svn+ssh://lyberdev1.stanford.edu/afs/ir/dev/dlss/svn/ngde/solrmarc/trunk@3675 e0eb17dc-060e-4555-9e78-273a5d168c06

Former-commit-id: efce784a856496627cc422083063d610495f073f