@@ -9,6 +9,8 @@ SOLR_DATA_DIR=/data/solr
 
 JAVA_HOME=/usr/lib/jvm/java
 
+NOW=`eval date +"%F_%T"`
+
 #   see memorymanagement_whitepaper.pdf  from Sun
 # gc general options of interest:  -XX:NewRatio=n
 # gc algorithm options
@@ -16,13 +18,13 @@ JAVA_HOME=/usr/lib/jvm/java
 #   parallel gc algorithms:   -XX:+UseParallelGC   and maybe   -XX:+UseParallelOldGC
 #   another parallel gc algorithm:    -XX:+UseConcMarkSweepGC   and maybe   –XX:+CMSIncrementalMode  or  -Xincgc
 #
+#LOG_OPTS=-Djava.util.logging.config.file=$BLACKLIGHT_HOMEDIR/jetty/solr/logging.properties
+#
+#JAVA_GC_OUTPUT_OPTS="-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:logs/gc_started_$NOW.txt"
+#
 #JAVA_OPTS="-server -Xmx12g -Xms12g -d64 -XX:+AggressiveOpts -XX:+UseParallelGC -XX:NewRatio=5"
 #JAVA_OPTS="-server -Xmx12g -Xms12g -d64 -XX:+AggressiveOpts -XX:+UseConcMarkSweepGC -XX:NewRatio=3"
 JAVA_OPTS="-server -Xmx15g -Xms15g -d64 -XX:+AggressiveOpts -XX:+UseConcMarkSweepGC -XX:ParallelGCThreads=4 -XX:NewRatio=3"
-
-#LOG_OPTS=-Djava.util.logging.config.file=$BLACKLIGHT_HOMEDIR/jetty/solr/logging.properties
-
-NOW=`eval date +"%F_%T"`
 
 SYSMSG_FNAME=sysmsgs_started_$NOW.txt
 
